adding author tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Trabajo práctico 1</title>
   <meta name="description" content="Trabajo práctico 1">
+  <meta name="author" content="José Campos">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
